--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "@fontsource/poppins": "^5.0.14",
     "@libsql/client": "^0.6.2",
     "@radix-ui/react-icons": "^1.3.0",
